--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,6 +68,14 @@
         <item name="android:background">@color/transparent</item>
         <item name="android:paddingRight">10dp</item>
         <item name="android:drawableRight">@drawable/selector_charge_order_details_item</item>
+    </style>
 
+    <style name="style_charge_scan_keyboard">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textSize">@dimen/text_extra</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
