publish the comment content and show the comment info

--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -3,28 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/text_white"
     tools:context="com.isoftston.issuser.fusioncharge.views.fragments.CommentsFragment">
 
-    <LinearLayout
-        android:background="@color/line"
+    <GridView
+        android:id="@+id/flow_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <com.isoftston.issuser.fusioncharge.weights.FlowLayout
-            android:id="@+id/flow_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
-            android:padding="@dimen/dp_10" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:layout_marginTop="@dimen/dp_10"
-            android:background="@color/text_main" />
-    </LinearLayout>
-
+        android:numColumns="3"
+        android:verticalSpacing="8dp"
+        android:horizontalSpacing="16dp"
+        android:layout_margin="@dimen/dp_10"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_2"
+        android:background="@color/publish_bg_color" />
     <ListView
         android:id="@+id/comments_lv"
         android:layout_width="match_parent"
