--- a/app/src/main/res/layout/comments_point.xml
+++ b/app/src/main/res/layout/comments_point.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/point_tv"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_5"
-    android:background="@drawable/gray_stroke_bg"
-    android:padding="@dimen/dp_5" />
+    android:background="@drawable/grey_stroke_corner_fill_white"
+    android:padding="8dp"
+    android:textColor="@color/text_gray"/>
