--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="color_green">#8ada8a</color>
     <color name="color_yellow">#eca457</color>
     <color name="color_red">#ff0000</color>
+    <color name="publish_bg_color">#44cdcdcd</color>
 </resources>
