--- a/app/src/main/res/drawable/appoint_gray_bg_shape.xml
+++ b/app/src/main/res/drawable/appoint_gray_bg_shape.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="3dp" />
-    <solid android:color="@color/text_gray" />
+    <solid android:color="#889b9b9b" />
 </shape>
