--- a/app/src/main/res/layout/item_charge_pile_list.xml
+++ b/app/src/main/res/layout/item_charge_pile_list.xml
@@ -13,7 +13,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
-            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_20"
             android:orientation="vertical">
 
             <ImageView
@@ -44,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_5"
             android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginLeft="@dimen/dp_10"
             android:orientation="vertical">
 
             <LinearLayout
@@ -130,11 +132,11 @@
         android:id="@+id/electric_gun_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_10"
         android:layout_marginLeft="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
         android:layout_marginTop="@dimen/dp_10"
         android:divider="@null"
+        android:layout_marginBottom="@dimen/dp_10"
         android:dividerHeight="@dimen/dp_10"
         android:visibility="visible" />
 
@@ -142,4 +144,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/line" />
 </LinearLayout>
