--- a/app/src/main/res/layout/activity_charge_details.xml
+++ b/app/src/main/res/layout/activity_charge_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="com.isoftston.issuser.fusioncharge.views.ChargeDetailsActivity">
 
     <com.isoftston.issuser.fusioncharge.weights.NavBar
@@ -95,7 +96,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/line" />
+        android:background="@color/line1" />
 
     <LinearLayout
         android:layout_width="match_parent"
