--- a/app/src/main/res/layout/fragment_position.xml
+++ b/app/src/main/res/layout/fragment_position.xml
@@ -8,6 +8,7 @@
     <ListView
         android:id="@+id/charge_pile_Lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="@null"/>
 
 </FrameLayout>
