--- a/app/src/main/res/layout/item_charge_pile_list.xml
+++ b/app/src/main/res/layout/item_charge_pile_list.xml
@@ -38,7 +38,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_10"
-            android:background="@color/line" />
+            android:background="@color/line1" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,7 +126,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/line" />
+        android:background="@color/line1" />
 
     <ListView
         android:id="@+id/electric_gun_lv"
@@ -148,5 +148,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
-        android:background="@color/line" />
+        android:background="@color/line1" />
 </LinearLayout>
