--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,13 +5,15 @@
     <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_15">15dp</dimen>
+    <dimen name="dp_13">13dp</dimen>
     <dimen name="dp_18">18dp</dimen>
+    <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_40">40dp</dimen>
-    <dimen name="dp_0.5">0.5dp</dimen>
+    <dimen name="dp_0_5">0.5dp</dimen>
     <dimen name="dp_1">1dp</dimen>
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_200">200dp</dimen>
