--- a/app/src/main/res/layout/item_search_history_or_result.xml
+++ b/app/src/main/res/layout/item_search_history_or_result.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/dp_15"
+    android:paddingRight="@dimen/dp_15">
     <TextView
         android:id="@+id/history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="@dimen/dp_8"
         android:layout_gravity="start|center_vertical"
-        android:textSize="@dimen/dp_18"
+        android:textSize="@dimen/dp_15"
         android:textColor="@color/text_gray" />
 
 
@@ -25,17 +27,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_8"
-            android:layout_marginBottom="@dimen/dp_2"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_15"
             android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/resut_adress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_2"
+            android:layout_marginTop="@dimen/dp_8"
             android:layout_marginBottom="@dimen/dp_8"
-            android:textSize="@dimen/dp_18"
+            android:textSize="@dimen/dp_13"
             android:textColor="@color/text_gray"/>
     </LinearLayout>
 
